fix alignment and footer's date

--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -1910,7 +1910,7 @@
 :global(.vtex-store-components-3-x-price_sellingPriceContainer) {
   width: 100%;
   padding: 0;
-  margin: 0 10px;
+  margin: 0 2px;
 }
 
 :global(.vtex-shelf-1-x-dot--isActive) {
