--- a/styles/scss/vtex.product-summary.scss
+++ b/styles/scss/vtex.product-summary.scss
@@ -355,7 +355,7 @@
   .productBrand {
     font-size: 10px !important;
     height: auto !important;
-    padding: 0 8px;
+    padding: 0 4px;
   }
 }
 
