--- a/styles/scss/vtex.store-components.scss
+++ b/styles/scss/vtex.store-components.scss
@@ -807,7 +807,7 @@
 
 .listPriceValue {
   padding: 0;
-  margin:0 10px;
+  margin:0 4px;
 
   .currencyContainer {
     font-size: 9px;
